<resources>
    <string name="app_name">Kontrol</string>
    <string name="login">Login</string>
    <string name="password_hint">PASSWORD</string>
    <string name="username_hint">USERNAME</string>
    <string name="saad_bazaz_com"> saad@bazaz.com</string>
    <string name="rs">Rs.</string>
    <string name="_return">Return &#9660;</string>
    <string name="expired">Expired &#9660;</string>
    <string name="active_tasks">ACTIVE TASKS</string>
    <string name="all_tasks">Filter</string>
    <string name="sort_by">Sort by…</string>
    <string name="cheque">CHEQUE</string>
    <string name="online">ONLINE</string>
    <string name="cash">CASH</string>
    <string name="payment_method">Payment Method</string>
    <string name="new_payment">COMPLETE TASK</string>
    <string name="verify">   Verify   </string>
    <string name="save_draft">Save Draft</string>
    <string name="please_make_sure_to_check_all_details_before_pressing_verify">Please make sure to check all details before pressing \'Verify\'.</string>
    <string name="upload_image_here">Upload image here</string>
    <string name="enter_remarks_if_any">Remarks (if any)</string>
    <string name="type">Type</string>
    <string name="next">NEXT</string>
    <string name="customer_verification">Customer Verification</string>
    <string name="admin">Admin</string>
    <string name="verify_to">Verify to…</string>
    <string name="date">DATE</string>
    <string name="invoice_id">INVOICE ID</string>
    <string name="shop">SHOP</string>
    <string name="received_amount">Received Amount</string>
    <string name="debit">DEBIT</string>
    <string name="received_amount_is_required">Received Amount is required!</string>
    <string name="phone_number_not_valid">Phone Number Not Valid!</string>
    <string name="phone_number">Phone Number</string>
    <string name="create_new_payment">Create New Payment</string>
    <string name="online_small">Online</string>
    <string name="cheque_small">Cheque</string>
    <string name="cash_online">Cash</string>
    <string name="remarks">Remarks:</string>
    <string name="received_">Received Amount:</string>
    <string name="invoice_id_">Invoice ID:</string>
    <string name="time">Time:</string>
    <string name="select_shop">Select Shop:</string>
    <string name="type_">Type:</string>
    <string name="date_">Date:</string>
    <string name="payment_method_">Payment Method:</string>
    <string name="saloon_deziners"> Saloon Deziners</string>
    <string name="supply_officer">  Supply Officer</string>
    <string name="info_saloondeziners_com">info@saloondeziners.com</string>
    <string name="area">Area: </string>
    <string name="payment_collected">Payment Collected</string>
    <string name="tasks_completed">Tasks Completed</string>
    <string name="debit_">Debit:</string>
    <string name="shop_name_must_be_selected">Shop name must be selected!</string>
    <string name="debit_is_required">Debit is required!</string>
    <string name="optional">(Optional)</string>
    <string name="where_to_go">where to go?</string>
    <string name="active_right_now">Active Right Now</string>
    <string name="type_your_message_here">Type your message here</string>
    <string name="file">File</string>
    <string name="contact">Contact</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="recording_audio">Recording Audio…</string>
    <string name="enter_the_verification_code_sent_to_the_provided_phone_number">Enter the verification code sent to the provided phone number.</string>
    <string name="pin_isn_t_correct">PIN isn\'t correct!</string>
    <string name="drafts">DRAFTS</string>
    <string name="photo">Photo</string>
    <string name="location">Location</string>
    <string name="enter_query">Enter Query…</string>
    <string name="active">ACTIVE</string>
    <string name="waiting">WAITING</string>
    <string name="completed">COMPLETED</string>
    <string name="no_filter">No Filter</string>
    <string name="task_status">Task Status</string>
    <string name="date_assigned">Date Assigned</string>

    <style name="up">&#751;</style>
    <style name="down">&#752;</style>
</resources>