<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.grayhatdevelopers.kontrol.ui.fragments.executetasks.ExecutePaymentsBaseViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/include_root"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/remarks_et"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/rectangular_edit_text_bg"
            android:ems="10"
            android:hint="@string/enter_remarks_if_any"
            android:text="@={viewModel.enteredRemarks}"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            android:padding="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="Autofill,LabelFor" />

        <TextView
            android:id="@+id/textView38"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/dotted_border"
            android:drawableStart="@drawable/upload_icon"
            android:gravity="center"
            android:onClick="@{() -> viewModel.addPhoto()}"
            android:paddingStart="72dp"
            android:paddingTop="4dp"
            android:paddingEnd="72dp"
            android:paddingBottom="4dp"
            android:singleLine="true"
            android:text="@string/upload_image_here"
            app:layout_constraintEnd_toEndOf="@+id/remarks_et"
            app:layout_constraintStart_toStartOf="@+id/remarks_et"
            app:layout_constraintTop_toBottomOf="@+id/remarks_et" />

        <TextView
            android:id="@+id/textView39"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/please_make_sure_to_check_all_details_before_pressing_verify"
            app:layout_constraintEnd_toEndOf="@+id/textView38"
            app:layout_constraintStart_toStartOf="@+id/textView38"
            app:layout_constraintTop_toBottomOf="@+id/textView38" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/save_draft_bg"
            android:paddingStart="32dp"
            android:paddingEnd="32dp"
            android:text="@string/save_draft"
            android:textColor="@color/white"
            android:onClick="@{() -> viewModel.saveToDraft()}"
            app:layout_constraintBottom_toBottomOf="@+id/button2"
            app:layout_constraintEnd_toStartOf="@+id/button2"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/button2" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="32dp"
            android:background="@drawable/verify_btn_bg"
            android:paddingStart="32dp"
            android:paddingEnd="32dp"
            android:text="@string/verify"
            android:onClick="@{() -> viewModel.showVerifyOptions()}"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button"
            app:layout_constraintTop_toBottomOf="@+id/textView39"
            app:layout_constraintVertical_bias="0.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>