<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.grayhatdevelopers.kontrol.ui.fragments.executetasks.ExecutePaymentsBaseViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:background="@drawable/verify_confirm_bottom_sheet"
        android:focusable="true">

        <TextView
            android:id="@+id/textView40"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:text="@string/verify_to"
            android:textColor="@color/purple"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView41"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:text="@string/admin"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView40" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.25dp"
            android:background="@color/black"
            app:layout_constraintBottom_toTopOf="@+id/textView42"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView41" />

        <TextView
            android:id="@+id/textView42"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/customer_verification"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/textView41"
            app:layout_constraintTop_toBottomOf="@+id/textView41" />

        <TextView
            android:id="@+id/textView43"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@color/button_green"
            android:gravity="center"
            android:onClick="@{() -> viewModel.verifyTask()}"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:text="@string/next"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextPhone2" />

        <RadioGroup
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:checkedButton="@={viewModel.selectedVerificationMethod}"
            android:gravity="end"
            app:layout_constraintBottom_toBottomOf="@+id/textView42"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView41">

            <RadioButton
                android:id="@+id/admin_verify"
                android:layout_width="wrap_content"
                android:onClick="@{() -> viewModel.toggleRadioSelection()}"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp" />

            <RadioButton
                android:id="@+id/client_verify"
                android:onClick="@{() -> viewModel.toggleRadioSelection()}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </RadioGroup>

        <EditText
            android:id="@+id/editTextPhone2"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginTop="4dp"
            android:background="@drawable/edit_text_bg"
            android:ems="10"
            android:hint="@string/phone_number"
            android:text="@={viewModel.enteredPhoneNumber}"
            android:visibility="@{viewModel.isClientVerificationSelected() ? View.VISIBLE : View.GONE}"
            android:inputType="phone"
            android:paddingStart="24dp"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@+id/textView42"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/textView42"
            app:layout_constraintTop_toBottomOf="@+id/textView42"
            tools:ignore="Autofill,RtlSymmetry" />

        <TextView
            android:id="@+id/textView60"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/phone_number_not_valid"
            android:visibility="@{viewModel.isPhoneNumberNotValid() ? View.VISIBLE : View.GONE}"
            android:textColor="@color/error"
            android:textSize="12sp"
            android:textStyle="italic"
            app:layout_constraintBottom_toBottomOf="@+id/editTextPhone2"
            app:layout_constraintStart_toEndOf="@+id/editTextPhone2"
            app:layout_constraintTop_toTopOf="@+id/editTextPhone2"
            app:layout_constraintVertical_bias="0.9" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>