<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.grayhatdevelopers.kontrol.ui.fragments.chat.ChatViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:translationY="24dp">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/materialCardView6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:background="@color/white"
            android:visibility="visible"
            app:cardCornerRadius="24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="100dp">

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableTop="@drawable/document"
                    android:gravity="center"
                    android:onClick="@{() -> viewModel.selectFile()}"
                    android:text="@string/file"
                    app:layout_constraintBottom_toBottomOf="@+id/textView9"
                    app:layout_constraintEnd_toStartOf="@+id/textView8"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/textView9" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableTop="@drawable/contact"
                    android:gravity="center"
                    android:onClick="@{() -> viewModel.selectContact()}"
                    android:text="@string/contact"
                    app:layout_constraintBottom_toBottomOf="@+id/textView7"
                    app:layout_constraintEnd_toStartOf="@+id/textView75"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/textView7" />

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableTop="@drawable/photo"
                    android:gravity="center"
                    android:onClick="@{() -> viewModel.selectImage()}"
                    android:text="@string/photo"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/textView7"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintHorizontal_chainStyle="spread"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.26" />

                <TextView
                    android:id="@+id/textView75"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableTop="@drawable/ic_baseline_location_on_24"
                    android:text="@string/location"
                    android:onClick="@{() -> viewModel.selectLocation()}"
                    app:layout_constraintBottom_toBottomOf="@+id/textView8"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/textView8" />


            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>