<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <import type="android.view.View" />
        <variable
            name="viewModel"
            type="com.grayhatdevelopers.kontrol.ui.fragments.activetasks.ActiveTasksViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true"
        android:background="@color/background">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:elevation="8dp"
            android:animateLayoutChanges="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/active_tasks_top_bar_bg"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/textView19"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_marginEnd="8dp"
                    android:background="@drawable/white_circle_filled"
                    android:gravity="center"
                    bind:invisibleUnless="@{!viewModel.isSearchActive()}"
                    android:text="@{viewModel.activeTasksCount.toString()}"
                    android:textSize="21sp"
                    app:layout_constraintBottom_toBottomOf="@+id/textView20"
                    app:layout_constraintEnd_toStartOf="@+id/textView20"
                    app:layout_constraintTop_toTopOf="@+id/textView20"
                    tools:ignore="HardcodedText"
                    tools:visibility="invisible" />

                <TextView
                    android:id="@+id/textView20"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:layout_marginBottom="8dp"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/active_tasks"
                    bind:invisibleUnless="@{!viewModel.isSearchActive()}"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:visibility="invisible" />

                <ImageView
                    android:id="@+id/imageView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    bind:invisibleUnless="@{!viewModel.isSearchActive()}"
                    tools:visibility="gone"
                    android:onClick="@{() -> viewModel.activeSearch()}"
                    app:layout_constraintBottom_toBottomOf="@+id/textView20"
                    app:layout_constraintEnd_toStartOf="@+id/imageView6"
                    app:layout_constraintTop_toTopOf="@+id/textView20"
                    app:srcCompat="@drawable/ic_baseline_search_24"
                    tools:ignore="ContentDescription" />

                <ImageView
                    android:id="@+id/imageView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:onClick="@{() -> viewModel.showMenu()}"
                    app:layout_constraintBottom_toBottomOf="@+id/imageView5"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/imageView5"
                    app:srcCompat="@drawable/ic_baseline_more_vert_24"
                    tools:ignore="ContentDescription" />

                <ImageView
                    android:id="@+id/imageView7"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_marginStart="16dp"
                    android:onClick="@{() -> viewModel.goBack()}"
                    app:layout_constraintBottom_toBottomOf="@+id/textView19"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/textView19"
                    app:srcCompat="@drawable/ic_baseline_keyboard_arrow_left_24"
                    tools:ignore="ContentDescription" />

                <EditText
                    android:id="@+id/editTextTextPersonName2"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/type_msg_et_bg"
                    android:ems="10"
                    android:fontFamily="@font/cabin"
                    android:hint="@string/enter_query"
                    android:inputType="textPersonName"
                    android:onTextChanged="@{viewModel::onTextChanged}"
                    android:paddingStart="16dp"
                    android:text="@={viewModel.enteredSearchQuery}"
                    android:textColor="@color/black"
                    android:textStyle="italic"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/imageView6"
                    app:layout_constraintStart_toEndOf="@+id/imageView7"
                    app:layout_constraintTop_toTopOf="parent"
                    bind:goneUnless="@{viewModel.isSearchActive()}"
                    tools:ignore="Autofill,RtlSymmetry" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/textView21"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/dotted_border"
                android:drawableEnd="@drawable/calaneder_icon_small"
                android:drawablePadding="4dp"
                android:gravity="center"
                android:onClick="@{() -> viewModel.selectDate()}"
                android:paddingStart="16dp"
                android:paddingTop="2dp"
                android:paddingEnd="16dp"
                android:paddingBottom="2dp"
                android:text="@{viewModel.dateText}"
                android:textStyle="bold"
                tools:text="Today"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

            <TextView
                android:id="@+id/textView22"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/filter_icon"
                android:gravity="center"
                android:text="@string/all_tasks"
                android:onClick="@{() -> viewModel.filterTask()}"
                android:textColor="@color/purple"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/textView23"
                app:layout_constraintStart_toEndOf="@+id/textView21"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

            <TextView
                android:id="@+id/textView23"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="32dp"
                android:drawableStart="@drawable/sort_icon_small"
                android:text="@string/sort_by"
                android:textColor="@color/purple"
                android:textStyle="bold"
                android:onClick="@{() -> viewModel.sortTasks()}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/tasks_list"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/active_tasks_loading_bar"
            tools:listitem="@layout/item_active_task" />

        <ProgressBar
            android:id="@+id/active_tasks_loading_bar"
            style="@android:style/Widget.Material.Light.ProgressBar.Horizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:translationY="-6dp"
            android:visibility="@{viewModel.isDataLoaded() ? View.GONE : View.VISIBLE}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout2" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="8dp"
            app:cardElevation="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout2"
            bind:goneUnless="@{viewModel.showFilterOptions}"
            tools:visibility="visible">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginBottom="16dp"
                android:orientation="vertical"
                tools:ignore="RtlHardcoded">

                <CheckBox
                    android:id="@+id/checkBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:onCheckedChanged="@{viewModel::onActiveCheckedChanged}"
                    android:text="@string/active" />

                <CheckBox
                    android:id="@+id/checkBox2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:onCheckedChanged="@{viewModel::onWaitingCheckedChanged}"
                    android:text="@string/waiting" />

                <CheckBox
                    android:id="@+id/checkBox3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:onCheckedChanged="@{viewModel::onCompletedCheckedChanged}"
                    android:text="@string/completed" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="8dp"
            app:cardElevation="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout2"
            bind:goneUnless="@{viewModel.showSortOptions}">

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginBottom="8dp"
                android:onCheckedChanged="@{viewModel::onSplitTypeChanged}"
                tools:ignore="RtlHardcoded">

                <RadioButton
                    android:id="@+id/rb_no_filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/no_filter" />

                <RadioButton
                    android:id="@+id/rb_task_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/task_status" />

                <RadioButton
                    android:id="@+id/rb_date_assigned"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/date_assigned" />

            </RadioGroup>
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>